Archive2/d2/a7960c60404efa/output
main.cpp:17:5: error: declaration does not declare anything [-Werror,-Wmissing-declarations]
    const uint32_t LEDS;
    ^~~~~~~~~~~~~~
main.cpp:8:19: error: expected class member or base class name
        LEDS      (0x41200000),
                  ^
main.cpp:8:19: error: expected '{' or ','
main.cpp:22:20: warning: private field 'AXI_BRAM' is not used [-Wunused-private-field]
    const uint32_t AXI_BRAM;
                   ^
main.cpp:23:20: warning: private field 'AXI_DUMMY' is not used [-Wunused-private-field]
    const uint32_t AXI_DUMMY;
                   ^
2 warnings and 3 errors generated.
